[gd_scene load_steps=13 format=3 uid="uid://bo666p0hi6ao4"]

[ext_resource type="Texture2D" uid="uid://ccdxfw01ntt24" path="res://resources/table/opponent_bg.png" id="1_2w0u4"]
[ext_resource type="Script" path="res://table/opponent.gd" id="2_fvf8a"]
[ext_resource type="Texture2D" uid="uid://b6uaxmlvelj0u" path="res://resources/table/opponent_turn.png" id="3_grhin"]
[ext_resource type="FontFile" uid="uid://c3j6oa1sotgmy" path="res://resources/monogram.ttf" id="4_6g7qa"]
[ext_resource type="Texture2D" uid="uid://dh7hsr32iswba" path="res://resources/table/small_chips.png" id="5_y3wbd"]
[ext_resource type="Texture2D" uid="uid://cgei8xdcn8ptd" path="res://resources/table/blind_buttons.png" id="6_4of3v"]
[ext_resource type="Texture2D" uid="uid://djq6cws5w36dd" path="res://resources/table/small_back.png" id="7_rokl7"]
[ext_resource type="Texture2D" uid="uid://cqmqw0fa185ec" path="res://resources/table/small_deck.png" id="8_tjg8u"]
[ext_resource type="Texture2D" uid="uid://cheydy76g4wgo" path="res://resources/table/small_card_highlight.png" id="9_1mc3w"]

[sub_resource type="LabelSettings" id="LabelSettings_hseuh"]
font = ExtResource("4_6g7qa")
font_size = 64
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xma6u"]
font = ExtResource("4_6g7qa")
font_size = 48
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5as1i"]
resource_local_to_scene = true
line_spacing = -6.0
font = ExtResource("4_6g7qa")
font_size = 48
font_color = Color(0, 0, 0, 1)

[node name="Opponent" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_2w0u4")
stretch_mode = 2
script = ExtResource("2_fvf8a")
metadata/_edit_lock_ = true

[node name="TurnIndicator" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_grhin")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = -17.0
offset_right = 264.0
offset_bottom = 62.0
label_settings = SubResource("LabelSettings_hseuh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Chips" type="Sprite2D" parent="."]
visible = false
position = Vector2(24, 66)
texture = ExtResource("5_y3wbd")
region_enabled = true
region_rect = Rect2(0, 0, 24, 24)

[node name="BalanceLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 49.0
offset_top = 44.0
offset_right = 264.0
offset_bottom = 85.0
size_flags_horizontal = 6
label_settings = SubResource("LabelSettings_xma6u")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlindButton" type="Sprite2D" parent="."]
visible = false
position = Vector2(26, 121)
texture = ExtResource("6_4of3v")
region_enabled = true
region_rect = Rect2(0, 0, 36, 36)

[node name="CardParent" type="Node2D" parent="."]

[node name="CardBack1" type="TextureRect" parent="CardParent"]
visible = false
offset_left = 28.0
offset_top = 88.0
offset_right = 73.0
offset_bottom = 155.0
texture = ExtResource("7_rokl7")

[node name="CardBack2" type="TextureRect" parent="CardParent"]
visible = false
offset_left = 77.0
offset_top = 88.0
offset_right = 122.0
offset_bottom = 155.0
texture = ExtResource("7_rokl7")

[node name="Card1" type="Sprite2D" parent="CardParent"]
visible = false
position = Vector2(50, 121)
texture = ExtResource("8_tjg8u")
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(0, 0, 45, 67)

[node name="CardHighlight" type="TextureRect" parent="CardParent/Card1"]
visible = false
offset_left = -22.0
offset_top = -33.0
offset_right = 23.0
offset_bottom = 34.0
texture = ExtResource("9_1mc3w")

[node name="Card2" type="Sprite2D" parent="CardParent"]
visible = false
position = Vector2(99, 121)
texture = ExtResource("8_tjg8u")
offset = Vector2(0.5, 0.5)
region_enabled = true
region_rect = Rect2(0, 0, 45, 67)

[node name="CardHighlight" type="TextureRect" parent="CardParent/Card2"]
visible = false
offset_left = -22.0
offset_top = -33.0
offset_right = 23.0
offset_bottom = 34.0
texture = ExtResource("9_1mc3w")

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 151.0
offset_top = 79.0
offset_right = 264.0
offset_bottom = 159.0
label_settings = SubResource("LabelSettings_5as1i")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
